# cactus

./: README.md
cpp/: CMakeLists.txt  llama-chat.cpp
examples/flutter-cctv/: pubspec.yaml
examples/flutter-cctv/android/app/src/main/: AndroidManifest.xml
examples/flutter-cctv/ios/Runner/: Info.plist
examples/flutter-cctv/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter-cctv/lib/screens/: home_screen.dart
examples/flutter-cctv/lib/services/: camera_service.dart  inference.dart  inference_isolate_handler.dart
examples/flutter-cctv/lib/widgets/: debug_overlay.dart
examples/react-diary/: babel.config.js
examples/react-diary/ios/myapp.xcodeproj/: project.pbxproj
examples/react-example/ios/: Podfile
examples/react-example/ios/ReactNativeDemo/: Info.plist
examples/react-example/ios/ReactNativeDemo.xcodeproj/: project.pbxproj
ios/cactus.xcframework/ios-arm64/cactus.framework/: Info.plist
ios/cactus.xcframework/ios-arm64_x86_64-simulator/cactus.framework/: Info.plist
ios/cactus.xcframework/ios-arm64_x86_64-simulator/cactus.framework/_CodeSignature/: CodeResources
ios/cactus.xcframework/tvos-arm64/cactus.framework/: Info.plist
ios/cactus.xcframework/tvos-arm64_x86_64-simulator/cactus.framework/: Info.plist
ios/cactus.xcframework/tvos-arm64_x86_64-simulator/cactus.framework/_CodeSignature/: CodeResources
react/example/: cactus.ts
react/ios/: CactusContext.mm
react/scripts/: postInstall.js
react/src/: index.ts  lm.ts  projectId.d.ts  telemetry.ts  vlm.ts
